# Projeto-Rodrigo

./: .bash_history  .chatia_install_checkpoint  .claude.json  .claude.json.backup  .env.example  .gitignore  AGENTS.md  ASSINATURA_LANES.md  CLAUDE.md  CORRECOES_INSTALADOR.md  DEBUG_CHECKLIST.md  DEBUG_MESSAGES.md  GHOST_CONTACTS_FIXED.md  IMPLEMENTATION_SUMMARY.md  KANBAN_AUTOMATION.md  MIGRATION_NOTES.md  QUICK_START_FIX.md  ROADMAP.md  TEST_SOCKET.md  TROUBLESHOOTING_GHOST_CONTACTS.md  VARIAVEIS_INSTALACAO  desinstalador.sh  docker-compose.yml  instalador.sh  instalador.sh.backup-before-71fix  instalador.sh.backup-before-71fix-v2  instalador.sh.backup.20251006_195735  install-chatia.sh  install.sh  multi-task-plan-etapas15-22.md  multi-task-plan.md  plan.md  playwright.config.ts  postinstall.sh  task-prompts-optimized.md  task.md  z.txt
.claude/: .credentials.json  history.jsonl  settings.local.json
.codex/: auth.json  config.toml  history.jsonl  version.json
.cursor/: ide_state.json
@instalador/: .gitignore  FINAL_SUMMARY.md  INSTALACAO-VNC.md  README.md  index.html  manifest.json  package-lock.json  package.json  setup-vnc.sh  tsconfig.json  vite.config.ts
@instalador/src/src-tauri/: Cargo.toml  tauri.conf.json
@instalador/src/src-tauri/capabilities/: installer.json
@instalador/src/src-tauri/icons/: README.md
@instalador/src/src-tauri/src/: main.rs
backend/: Dockerfile  KANBAN-TROUBLESHOOTING.md  KANBAN_AUTOMATION_DEBUG_ROADMAP.md  add-lane-timer-fields-manual.sql  add-matchtype-column.sql  package.json  pnpm-lock.yaml  test-lanes.js  (+1 more)
(+5413 files in other folders)
