[package]
name = "chatia-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "~2.1.0", features = ["protocol-asset"] }
tauri-plugin-shell = "~2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.0"
urlencoding = "2.1"
regex = "1"
dirs = "5"
anyhow = "1"
rand = "0.8"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "~2.1.0", features = [] }
